--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,5 +11,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
