--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,9 +10,13 @@
   "devDependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.29.0"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.0",
+    "mysql": "^2.18.1"
   }
 }
